Added dummy request handlers
