# api/controllers/website.js
@@ -1,0 +1,35 @@
+'use strict';
+
+module.exports = {
+    getMatchingSites: getMatchingSites,
+    addWebsite: addWebsite,
+    getWebsiteWithID: getWebsiteWithID,
+    updateWebsite: updateWebsite,
+    downloadContent: downloadContent
+
+};
+
+function getMatchingSites(req, res) {
+    res.status(501);
+    res.json('Not implemented!');
+}
+
+function addWebsite(req, res) {
+    res.status(501);
+    res.json('Not implemented!');
+}
+
+function getWebsiteWithID(req, res) {
+    res.status(501);
+    res.json('Not implemented!');
+}
+
+function updateWebsite(req, res) {
+    res.status(501);
+    res.json('Not implemented!');
+}
+
+function downloadContent(req, res) {
+    res.status(501);
+    res.json('Not implemented!');
+}
